syntax = "proto3";

package pl.types;

option go_package = "typespb";

// The list of data types supported by our execution engine.
enum DataType {
  DATA_TYPE_UNKNOWN = 0;
  BOOLEAN = 1;
  INT64 = 2;
  FLOAT64 = 3;
  STRING = 4;
  TIME64NS = 5;
}
